<resources>
    <string name="app_name">蓝钻大数据</string>
    <string name="no_data">暂无数据</string>
    <string name="user_name">用户名</string>
    <string name="input_user_name">请输入用户ID</string>
    <string name="input_user_name_right">请输入8位用户ID</string>
    <string name="pwd">密码</string>
    <string name="input_user_pwd">请输入密码</string>
    <string name="confirm">确认</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="forget_pwd_answer">忘记密码？</string>
    <string name="login_tittle">蓝钻大数据网登录</string>
    <string name="can_do_until_start_for_main">暂不能投注\n距离投注时间</string>
    <string name="can_do_until_stop_for_main">距离截止\n投注时间</string>
    <string name="can_do_until_start_for_funny">暂无可销售的期号，距离下次第%s期开售还有%s</string>
    <string name="can_do_until_stop_for_funny">第%s期距离截止投注时间还有%s</string>
    <string name="onlynum_english">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="input_current_password">请输入当前登录密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_repeat_password">请重新输入新密码</string>
    <string name="main_open_award">第%s期 开奖号码</string>
    <string name="tips_for_anyselect">请至少选择%s个号码</string>
    <string name="tips_for_tuodan">请选择%s个胆码</string>
    <string name="input_ask">请输入安全问题</string>
    <string name="input_answer">请输入回答内容</string>
    <string name="loading">加载中...</string>
    <string name="double_click_exit">连续点击两次退出</string>
    <string name="tab_main">彩种</string>
    <string name="tab_open">开奖</string>
    <string name="tab_me">个人中心</string>
</resources>
