<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ModifyPasswordActivity">


    <include
        layout="@layout/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/nav_bar_height"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="当前登录密码"
            android:textColor="@color/color_tittle"
            android:textSize="@dimen/text_size_normal" />


        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/onlynum_english"
            android:drawablePadding="@dimen/image_padding"
            android:gravity="right"
            android:hint="@string/input_current_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/image_padding_big"
            android:password="true"
            android:textColor="@color/color_info"
            android:textCursorDrawable="@drawable/edit_cursor_drawable"
            android:textSize="@dimen/text_size_normal" />


        <ImageView
            android:id="@+id/iv_current_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/image_padding"
            android:paddingRight="@dimen/image_padding"
            android:src="@drawable/password_hide_ic" />

    </LinearLayout>

    <include layout="@layout/view_line"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="新密码"
            android:textColor="@color/color_tittle"
            android:textSize="@dimen/text_size_normal" />


        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/onlynum_english"
            android:drawablePadding="@dimen/image_padding"
            android:gravity="right"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/image_padding_big"
            android:password="true"
            android:textColor="@color/color_info"
            android:textCursorDrawable="@drawable/edit_cursor_drawable"
            android:textSize="@dimen/text_size_normal" />


        <ImageView
            android:id="@+id/iv_new_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/image_padding"
            android:paddingRight="@dimen/image_padding"
            android:src="@drawable/password_hide_ic" />

    </LinearLayout>

    <include layout="@layout/view_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="重复新密码"
            android:textColor="@color/color_tittle"
            android:textSize="@dimen/text_size_normal" />


        <EditText
            android:id="@+id/et_new_repeat_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/onlynum_english"
            android:drawablePadding="@dimen/image_padding"
            android:gravity="right"
            android:hint="@string/input_new_repeat_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/image_padding_big"
            android:password="true"
            android:textColor="@color/color_info"
            android:textCursorDrawable="@drawable/edit_cursor_drawable"
            android:textSize="@dimen/text_size_normal" />


        <ImageView
            android:id="@+id/iv_new_repeat_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/image_padding"
            android:paddingRight="@dimen/image_padding"
            android:src="@drawable/password_hide_ic" />

    </LinearLayout>

    <include layout="@layout/view_line"/>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/nav_bar_height"
        android:background="@drawable/normal_submit_btn_green"
        android:gravity="center"
        android:padding="@dimen/image_padding_big"
        android:text="确认"
        android:textColor="@color/white" />

</LinearLayout>